--- a/instagram/src/index.css
+++ b/instagram/src/index.css
@@ -144,3 +144,8 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+input,
+button {
+  outline: 0;
+}
