--- a/instagram/src/components/PostsContainer/LikeSection.css
+++ b/instagram/src/components/PostsContainer/LikeSection.css
@@ -15,6 +15,9 @@
 .likes-container > .icons > .fa-heart {
   margin-right: 20px;
 }
+.likes-container > .icons > .fa-heart:active {
+  color: red;
+}
 
 .likes-container > .icons > .fa-comment {
   transform: scaleX(-1);
