--- a/instagram/src/components/SearchBar/Search.css
+++ b/instagram/src/components/SearchBar/Search.css
@@ -5,7 +5,7 @@
 }
 
 .logo {
-  width: 38.5%;
+  width: 33.3%;
   display: flex;
   align-items: center;
 }
@@ -23,8 +23,9 @@
 }
 
 .search {
-  width: 42.5%;
+  width: 33.3%;
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
@@ -41,8 +42,14 @@
 
 .links {
   padding-top: 10px;
-  width: 19%;
+  width: 33.3%;
   display: flex;
+  flex-direction: row-reverse;
+}
+
+.links-container {
+  display: flex;
+  width: 56%;
   justify-content: space-evenly;
   align-items: center;
 }
